# plugin-templating

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: creation.rs  host_bridge.rs  lib.rs  render.rs
src/ui/: settings.html
