[package]
name = "diaryx_templating_extism"
version = "1.2.1"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diaryx_core = { git = "https://github.com/diaryx-org/diaryx", tag = "v1.2.1" }
diaryx_templating = { git = "https://github.com/diaryx-org/diaryx", tag = "v1.2.1" }
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"

[profile.release]
lto = "fat"
codegen-units = 1
