[package]
name = "diaryx_templating_extism"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
handlebars = "6"

[profile.release]
lto = "fat"
codegen-units = 1
